# trading_stock_evaluator

./: PLAN.md  README.md  main.py  pyproject.toml
src/: config.py
src/api/: __init__.py  app.py  schemas.py
src/services/: __init__.py  features.py  ingestion.py  model.py
